--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@testing-library/react-native": "^9.1.0",
     "react": "17.0.2",
-    "react-native": "0.68.0"
+    "react-native": "0.68.0",
+    "react-native-paper": "^4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
